Updated title color and autodownload

--- a/ratemyspeech/src/app.css
+++ b/ratemyspeech/src/app.css
@@ -39,7 +39,7 @@
   margin: 1rem;
   font-size: 2rem;
   font-family: "Roboto Mono", monospace;
-  color: #1a1f3b;
+  color: #FF2C2C;
   z-index: 1000;
   display: inline-block;
 
